--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SITE_NAME_HEADER=Digital Garden
-SITE_MAIN_LANGUAGE=en
+SITE_MAIN_LANGUAGE=pt
 SITE_BASE_URL=https://rococo-hotteok-984aa2.netlify.app/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
@@ -21,4 +21,4 @@ dgShowFileTree=true
 dgEnableSearch=false
 dgShowToc=true
 dgLinkPreview=true
-dgShowTags=false
+dgShowTags=true
